--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,16 +7,14 @@
     <div id="bri-clock"></div>
 
     <div id="bri-photographers">
-      <% User.junior_photographers.order('position ASC').each do |photographer| %>
-	<div class="bri-photographer" data-id=<%= photographer.id %> >
-	  <%= image_tag photographer.avatar.url, class: 'bri-photo' %>
-	  <div class="bri-data">
-	    <span class="bri-camera"></span>
-	    <span class="bri-number"><%= photographer.position %></span>
-	    <span class="bri-name"><%= photographer.first_name %><br><%= photographer.last_name %></span>
-	  </div>
-	</div>
-      <% end %>
+      <% User.junior_photographers.order('position ASC').each do |photographer| %><div class="bri-photographer" data-id="<%= photographer.id %>" data-position="<%= photographer.position %>" >
+      	  <%= image_tag photographer.avatar.url, class: 'bri-photo' %>
+      	  <div class="bri-data">
+      	    <span class="bri-camera"></span>
+      	    <span class="bri-number"><%= photographer.position %></span>
+      	    <span class="bri-name"><%= photographer.first_name %><br><%= photographer.last_name %></span>
+      	  </div>
+      	</div><% end %>
 
       <div class="bri-all">
 	<div class="bri-bracket"></div>
