--- a/app/views/photos/promo.html.erb
+++ b/app/views/photos/promo.html.erb
@@ -11,7 +11,7 @@
     <div id="bri-fest-title"></div>
 
     <%= link_to image_tag('promo/index/find-me.png'), photos_clock_path, class: 'bri-nav', id: 'bri-find-me' %>
-    <%= link_to image_tag('promo/index/fest.png'), photos_clock_path, class: 'bri-nav', id: 'bri-fest' %>
+    <%= link_to image_tag('promo/index/fest.png'), photos_festival_path, class: 'bri-nav', id: 'bri-fest' %>
 
     <div id="bri-letters">
       <%= image_tag 'promo/index/letters/ya.png',    id: 'bri-letters-ya' %>
