--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -49,3 +49,56 @@
 <% end %>
 
 <script> $(document).ready(function(){ photos() })</script>
+
+
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
+
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
+<!-- Put this script tag to the <head> of your page -->
+<script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
+<script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
+<script type="text/javascript">
+  VK.init({apiId: 2953652, onlyWidgets: true});
+</script>
+<!-- Put this div tag to the place, where the Like block will be -->
+
+<script type="text/javascript">
+  VK.Widgets.Like("vk_like", {type: "mini", height: 20});
+</script>
+
+<script type="text/javascript"><!--
+document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));
+--></script>
+
+
+
+<link href="http://stg.odnoklassniki.ru/share/odkl_share.css" rel="stylesheet">
+<script src="http://stg.odnoklassniki.ru/share/odkl_share.js" type="text/javascript" ></script>
+
+
+
+<!-- Поместите этот тег туда, где должна отображаться кнопка +1. -->
+
+
+<!-- Поместите этот вызов функции отображения в соответствующее место. -->
+<script type="text/javascript">
+  window.___gcfg = {lang: 'ru'};
+
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
