--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -45,6 +45,7 @@
   <%= text_field_tag :photographers, params[:photographers] || '', id: 'bri-form-photographers' %>
   <%= text_field_tag :hour, params[:hour] || 10, id: 'bri-form-hour' %>
   <%= text_field_tag :minute, params[:minute] || 00, id: 'bri-form-minute' %>
+  <%= text_field_tag :page, params[:page] || 1, id: 'bri-form-page' %>
   <%= submit_tag %>
 <% end %>
 
