--- a/app/assets/stylesheets/dialog.css
+++ b/app/assets/stylesheets/dialog.css
@@ -13,9 +13,9 @@
 .dialog_block .field { padding:4px 0px; min-height:36px;}
 .dialog_block .field label { color:#2c2c2c; font-weight:bold; float:left; width:120px; padding-right:20px}
 
-.dialog_block .field input[type="text"] {  behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; background:#fff; border:none; margin:0px; padding:7px 10px; font-size:14px; color:#333333; width:344px; border:1px solid #cccccb; font-family:Arial, Helvetica, sans-serif}
+.dialog_block .field input[type="text"] {  behavior: url(/assets/border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; background:#fff; border:none; margin:0px; padding:7px 10px; font-size:14px; color:#333333; width:344px; border:1px solid #cccccb; font-family:Arial, Helvetica, sans-serif}
 
-.dialog_block .field textarea {  behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; background:#fff; border:none; margin:0px; padding:7px 10px; font-size:14px; color:#333333; width:344px; border:1px solid #cccccb; font-family:Arial, Helvetica, sans-serif}
+.dialog_block .field textarea {  behavior: url(/assets/border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; background:#fff; border:none; margin:0px; padding:7px 10px; font-size:14px; color:#333333; width:344px; border:1px solid #cccccb; font-family:Arial, Helvetica, sans-serif}
 
 .dialog_block .button { padding-left:140px; padding-top:10px}
 .dialog_block .button input { -moz-border-radius:8px; border-radius:8px; -webkit-border-radius:8px; -khtml-border-radius:8px; padding:5px 25px 5px 25px; color:#fff; font-weight:bold; text-decoration:none; display:inline-block; background:#0aaceb; border:none; margin:0; font-size:16px; font-family:Arial, Helvetica, sans-serif; cursor:pointer}
@@ -28,7 +28,7 @@
 	
 }
 
-.tzSelect .selectBox{position:absolute; padding:7px 10px; font-size:14px; color:#333333; width:344px; border:1px solid #cccccb; background:#fff url(../images/select_arrow.png) no-repeat right center; behavior: url(border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; }
+.tzSelect .selectBox{position:absolute; padding:7px 10px; font-size:14px; color:#333333; width:344px; border:1px solid #cccccb; background:#fff url(../images/select_arrow.png) no-repeat right center; behavior: url(/assets/border-radius.htc); -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px; }
 
 .tzSelect .selectBox.expanded{ border-bottom:none; -moz-border-radius:6px 6px 0 0; border-radius:6px 6px 0 0; -webkit-border-radius:6px 6px 0 0; -khtml-border-radius:6px 6px 0 0;}
 
