fix clock and photo

--- a/app/assets/stylesheets/promo/clock.css
+++ b/app/assets/stylesheets/promo/clock.css
@@ -81,7 +81,7 @@ body.clock
       line-height: 36px;
       border-radius: 8px;
     }
-      #bri-form .bri-nav img { height: 70%; }
+      #bri-form .bri-nav img { height: 26px; }
       #bri-form .bri-nav:active { margin-top: 3px; }
 
 
