--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,7 @@
 <% @body_class="photos" %>
 
+<%= link_to image_tag('promo/goto-site.png'), root_path, id: 'bri-goto-site' %>
+
 <div id="bri-content">
 
   <header>
@@ -51,7 +53,7 @@
 <script> $(document).ready(function(){ photos() })</script>
 
 
-
+<div style="display:none">
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -59,7 +61,6 @@
   js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-
 
 
 
@@ -102,3 +103,5 @@ document.write(VK.Share.button(false,{type: "round_nocount", text: "Подели
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+
+</div>
