--- a/app/assets/stylesheets/promo/clock.css
+++ b/app/assets/stylesheets/promo/clock.css
@@ -8,7 +8,7 @@ body.clock
   position: absolute;
   width: 100%;
   min-width: 720px;
-  top: 0;
+  top: 20px;
   bottom: 10em;
 }
   #bri-main-clock .bri-photographer
@@ -18,6 +18,7 @@ body.clock
     width: 10%;
     text-align: center;
     font-family: Futura;
+    display: none;
   } 
     #bri-main-clock .bri-photographer:hover
     {
@@ -35,7 +36,7 @@ body.clock
     margin-left: -88px;
     height: 100%;
     text-align: center;
-    background: url(/assets/promo/clock/photographers3.png) no-repeat center top;
+   /* background: url(/assets/promo/clock/photographers3.png) no-repeat center top; */
     background-size: contain;
   }
     #bri-svg 
@@ -56,6 +57,10 @@ body.clock
     background-size: contain;
     color: #85b8e3;
   }
+
+    #bri-photographers-all.active {
+      color: #C94364;
+    }
 
   #bri-form
   {
