fix links to social services #BRI-295

--- a/app/views/layouts/promo.html.erb
+++ b/app/views/layouts/promo.html.erb
@@ -18,13 +18,13 @@
 
         <div class="bri-news left">
           <span class="left">Читайте<br>яркие новости</span>
-          <%= link_to image_tag('promo/index/fb.png'), '#' %>
-          <%= link_to image_tag('promo/index/vk.png'), '#' %>
+          <%= link_to image_tag('promo/index/fb.png'), 'http://www.facebook.com/festivalyarkieludi', target: '_blank' %>
+          <%= link_to image_tag('promo/index/vk.png'), 'http://vk.com/yarkieludifestival', target: '_blank' %>
         </div>
 
         <div class="bri-videos">
           <span class="left">Смотрите<br>яркие ролики</span>
-          <%= link_to image_tag('promo/index/yt.png'), '#' %>
+          <%= link_to image_tag('promo/index/yt.png'), 'http://www.youtube.com/user/yarkielyudi', target: '_blank' %>
         </div>
 
       </div>
