--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,7 +1,8 @@
 <%= semantic_form_for [:admin, @user] do |f| %>
   <%= f.inputs 'Основное' do %>
     <%= f.input :email %>
-    <%= f.input(:password, as: :hidden, value: rand_password) if @user.new_record? %>
+    <%#= f.input(:password, as: :hidden, value: rand_password) if @user.new_record? %>
+    <%= f.input :password %>
     <%= f.input :role, as: :select, collection: Role.user_sets, include_blank: false %>
     <%= f.input :position, as: :select, collection: (1..10).map {|i| i}, include_blank: false %>
     <div id="chose_user_activity">
