finished festival page

--- a/app/views/photos/festival.html.erb
+++ b/app/views/photos/festival.html.erb
@@ -19,7 +19,9 @@
     </div>
 
   </header>
-
+  <div class="container">
+    <%= render 'photos', photos: @photos %>
+  </div>
 </div>
 
 <script> $(document).ready(function(){ festival() }) </script>
