--- a/app/assets/stylesheets/promo/clock.css
+++ b/app/assets/stylesheets/promo/clock.css
@@ -85,6 +85,7 @@ body.clock
       height: 40px;
       line-height: 36px;
       border-radius: 8px;
+      margin: auto
     }
       #bri-form .bri-nav img { height: 26px; }
       #bri-form .bri-nav:active { margin-top: 3px; }
