--- a/app/assets/stylesheets/promo/index.css
+++ b/app/assets/stylesheets/promo/index.css
@@ -38,6 +38,7 @@ body.promo
       position: absolute;
       z-index: 0;
       max-width: 186px;
+      max-height: 120px;
       width: 13%;
       margin-left: -5%;
       opacity: 0;
