--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -20,7 +20,7 @@
 
       <div class="bri-all">
 	<div class="bri-bracket"></div>
-	<div class="bri-hd">
+	<div class="bri-hd" style="position:absolute">
 	  <a href="#" id="bri-hd-download"></a>
 	  <a href="#" id="bri-hd-switch"></a>
 	  Сохранить фото в HD
