--- a/app/assets/stylesheets/promo/photos.css
+++ b/app/assets/stylesheets/promo/photos.css
@@ -19,6 +19,7 @@ body.photos
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
+  /*min-width: 1180px*/
 }
   body.photos header 
   { 
@@ -29,8 +30,8 @@ body.photos
     #bri-clock
     {
       float: left;
-      width: 244px;
-      height: 244px;
+      width: 220px;
+      height: 220px;
     }
 
     .bri-photo-box {float:left; position:relative}
@@ -38,7 +39,7 @@ body.photos
     #bri-photographers
     {
       position: relative;
-      margin-left: 260px;
+      margin-left: 230px;
       height: 150px;
     }
       #bri-photographers .bri-photographer
@@ -103,7 +104,7 @@ body.photos
           #bri-photographers .bri-photographer .bri-number
           {
             margin-left: 10px;
-            font-size: 300%;
+            font-size: 200%;
           }
             #bri-photographers .bri-photographer.active .bri-number
             {
