--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -36,7 +36,9 @@
 
   <div id="bri-photos">
     <div class="am-container" id="am-container">
-      <%= render 'photos', photos: @photos %>
+      <div class='hidden-photos'>
+	<%= render 'photos', photos: @photos %>
+      </div>
     </div>
     <div class="clearfix"></div>
     <div id="bri-preloader"></div>
