fix fest height

--- a/app/assets/stylesheets/promo/festival.css
+++ b/app/assets/stylesheets/promo/festival.css
@@ -12,6 +12,7 @@ body.festival header
     position: relative;
     font-family: Futura;
     font-size: 120%;
+    height: 220px;
   }
     #bri-fest-events .bri-item
     {
