--- a/app/views/dashboard/photos/my_photos.html.erb
+++ b/app/views/dashboard/photos/my_photos.html.erb
@@ -1,10 +1,12 @@
 <%= render 'dashboard/shared/profile_menu', current: 'my_photos' %>
 
+<%= paginate @photos %>
 <% @photos.each do |photo| %>
   <% if photo.processing %>
-    <%= photo.photo.original_filename %>
+    Обрабатывается <%= photo.photo.original_filename %>
   <% else %> 
     <%= image_tag photo.photo.url %>
   <% end %>
   <%= link_to "Delete photo", dashboard_photo_path(photo), :method => :delete %>
 <% end %>
+<%= paginate @photos %>
