--- a/app/views/dashboard/photos/my_photos.html.erb
+++ b/app/views/dashboard/photos/my_photos.html.erb
@@ -1,10 +1,14 @@
 <%= render 'dashboard/shared/profile_menu', current: 'my_photos' %>
-
+<ul class="photo-list-user">
 <% @photos.each do |photo| %>
+<li>
   <% if photo.processing %>
     <%= photo.photo.original_filename %>
   <% else %> 
     <%= image_tag photo.photo.url %>
   <% end %>
   <%= link_to "Delete photo", dashboard_photo_path(photo), :method => :delete %>
+</li>
 <% end %>
+</ul>
+<div class="clear"></div>
