--- a/app/views/photos/_photos.html.erb
+++ b/app/views/photos/_photos.html.erb
@@ -1,11 +1,10 @@
 <% photos.each do |photo| %>
-<div class="bri-photo-box">
-	<div class="bri-checkbox">
+  <div class="bri-photo-box">
+    <div class="bri-checkbox">
       <div></div>
     </div>
-  <a rel="prettyPhoto[mixed]" href="<%= photo.photo.url(:medium) %>" data-big="<%= photo.photo.url(:big) %>" data-id="<%= photo.id %>" data-views="<%= photo.views %>">
-    
-    <%= image_tag(photo.photo.url) %>
-  </a>
-</div>
+    <a rel="prettyPhoto[mixed]" href="<%= photo.photo.url(:medium) %>" data-big="<%= photo.photo.url(:big) %>" data-id="<%= photo.id %>" data-views="<%= photo.views %>">
+      <%= image_tag photo.photo.url, onload: 'window.i_loaded($(this))' %>
+    </a>
+  </div>
 <% end %>
