add ie.css to ext folder

--- a/app/views/dashboard/photos/index.html.erb
+++ b/app/views/dashboard/photos/index.html.erb
@@ -1,5 +1,11 @@
 <%= render 'dashboard/shared/profile_menu', current: 'photo' %>
 
+<% content_for :after_head do %>
+  <!--[if IE]>
+  <%= stylesheet_link_tag 'ext/ie' %>
+  <![endif]-->
+<% end %>
+
 <%= form_for GalleryPhoto.new, url: dashboard_photos_path, html: {id: 'fileupload'} do |f| %>  
   <% if current_user.main_photographer? %>
 	<div class="field">
